--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: calc(100vh - 60px);
-  background: #ffd700;
+  margin-top: 80px;
+  /* height: calc(100vh - 60px); */
+  /* background: #ffd700; */
   justify-content: center;
 }
 
@@ -28,7 +29,7 @@
   margin: 0;
 }
 .time {
-  color: #ffd700;
+  color: black;
   margin: 0;
   font-size: 16px;
   margin-right: 10px;
@@ -57,7 +58,7 @@
 }
 header {
   display: flex;
-  background: #0088a0;
+  /* background: #0088a0; */
   height: 40px;
   justify-content: space-between;
   align-items: center;
@@ -79,7 +80,7 @@ header {
   /* display: none; */
 }
 .twitter {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   width: 40px;
@@ -99,7 +100,7 @@ header {
    height: 45px;
  }
  .headerLeft {
-   margin: 0 auto;
+   /* margin: 0 auto; */
  }
  .time {
    position: absolute;
@@ -110,7 +111,7 @@ header {
    margin-top: 5px;
  }
  .container {
-   margin-top: 0px;
+   margin-top: 20px;
  }
  .playerContainer {
    flex-direction: column;
