--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: 80px;
-  /* height: calc(100vh - 60px); */
-  /* background: #ffd700; */
+  margin-top: 60px;
   justify-content: center;
 }
 
@@ -99,6 +97,9 @@ header {
    width: 45px;
    height: 45px;
  }
+ .twitter {
+   width: 30px;
+ }
  .headerLeft {
    /* margin: 0 auto; */
  }
@@ -107,11 +108,11 @@ header {
    top: 0;
    right: 0;
    font-size: 12px;
-   margin-right: 5px;
-   margin-top: 5px;
+   margin-right: 10px;
+   margin-top: 10px;
  }
  .container {
-   margin-top: 20px;
+   margin-top: 10px;
  }
  .playerContainer {
    flex-direction: column;
